[package]
name = "terrain"
version = "0.1.0"
authors = ["xoreo <mattnappo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
rand = "0.5.0"
glam = { version = "0.12", features = ["mint"] }
mint = "0.5"

[[bin]]
name = "random"
path = "src/random.rs"

[[bin]]
name = "perlin"
path = "src/perlin.rs"

